--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ body {
 .hero-subtext {
     font-size: 18px;
     color: #e5e7eb;
+    padding-bottom: 12px;
 }
 
 .sign-up {
@@ -69,6 +70,7 @@ body {
 }
 
 .information {
+    padding: 26px;
     display: flex;
     flex-flow: column;
     align-items: center;
@@ -78,6 +80,7 @@ body {
     font-size: 36px;
     font-weight: 900;
     color: #1f2937;
+    padding-bottom: 26px;
 }
 
 .multi-card {
@@ -92,13 +95,86 @@ body {
     align-items: center;
     text-align: center;
     max-width: 200px;
+    padding-bottom: 40px;
 }
 
 .card-img {
     display: block;
     border: 3px solid #3882f6;
     border-radius: 10%;
+    margin-bottom: 12px;
 }
+
+.quote {
+    display: flex;
+    flex-flow: column;
+    background-color: #e5e7eb;
+    color: #1f2937;
+}
+
+.quote-container {
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    padding: 52px 25%;
+
+}
+
+.quote-text {
+    font-size: 36px;
+    font-style: italic;   
+    font-weight: lighter;
+}
+
+.quote-author {
+    font-size: 26px;
+    align-self: flex-end;
+    font-weight: bold;
+}
+
+.call-to-action {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.call-to-action-container {
+    display: flex;
+    background-color: #3882f6;
+    border-radius: 1em;
+    margin: 5%;
+    justify-content: space-around;
+    width: 80em;
+    height: 10em;
+    align-items: center;
+    gap: 3rem;
+}
+
+.call-to-action-text {
+    display: flex;
+    flex-flow: column;
+}
+
+.call-to-action-header {
+    color: #f9faf8;
+    font-size: 24px;
+}
+
+.call-to-action-subtext {
+    color: #e5e7eb;
+    font-size: 18px;
+}
+
+.call-to-action-button {
+    border: 2px solid #f9f9f9;
+    background-color: #3882f6;
+    border-radius: 8px;
+    color: #f9f9f9;
+    padding: 8px 24px;
+}
+
+
+
 
 
 
@@ -111,6 +187,6 @@ a {
 }
 
 img {
-    max-width: 100px;
-    max-height: auto;
+    max-width: 200px;
+    max-height: 200px;
 }
