--- a/style.css
+++ b/style.css
@@ -9,11 +9,11 @@ body {
     display: flex;
     align-items: center;
     background-color: #1f2937;
-    width: 100%;
 }
 
 .header {
     justify-content: space-between;
+    padding: 0 10%;
 }
 
 .footer {
@@ -23,7 +23,6 @@ body {
     padding: 16px 0px;
 }
 
-
 .header-logo {
     font-size: 24px;
     color: #f9faf8;
@@ -32,6 +31,12 @@ body {
 .header-link {
     font-size: 18px;
     color: #e5e7eb;
+    padding-right: 16px;
+}
+
+.links {
+    display: flex;
+    gap: 16px;
 }
 
 .main {
@@ -39,15 +44,19 @@ body {
 }
 
 .hero {
-    padding: 52px;
+    padding: 52px 10%;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
+    align-items: center;
     background-color: #1f2937;
+    gap: 12px;
 }
 
 .hero-left {
     display: flex;
     flex-flow: column;
+    flex: 4;
+
 }
 
 .hero-big {
@@ -67,6 +76,19 @@ body {
     background: #3882f6;
     border: 1px solid #3882f6;
     color: #f9faf8;
+    padding: 8px 24px;
+}
+
+.container-hero-img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 1;
+}
+
+.hero-img {
+    max-height: 500px;
+    max-width: 500px;
 }
 
 .information {
@@ -94,7 +116,7 @@ body {
     flex-flow: column;
     align-items: center;
     text-align: center;
-    max-width: 200px;
+    max-width: 15rem;
     padding-bottom: 40px;
 }
 
@@ -103,6 +125,8 @@ body {
     border: 3px solid #3882f6;
     border-radius: 10%;
     margin-bottom: 12px;
+    max-width: 10rem;
+    max-height: auto;
 }
 
 .quote {
@@ -158,6 +182,7 @@ body {
 .call-to-action-header {
     color: #f9faf8;
     font-size: 24px;
+    font-weight: bold;
 }
 
 .call-to-action-subtext {
@@ -173,20 +198,7 @@ body {
     padding: 8px 24px;
 }
 
-
-
-
-
-
-
-
-
 a {
     text-decoration: none;
-    padding: 0px 16px;
 }
 
-img {
-    max-width: 200px;
-    max-height: 200px;
-}
